Solved the auth/reg form overflow on y

--- a/beFit/web/src/app/web/autorizare/autentificare/autentificare/autentificare.component.css
+++ b/beFit/web/src/app/web/autorizare/autentificare/autentificare/autentificare.component.css
@@ -20,20 +20,6 @@
 }
 
 
-@media only screen and (max-width: 1200px) {
-    .auth-form-container{
-        width: 60%;
-        height: 70%;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .auth-form-container{
-        width: 90%;
-        height: 70%;
-    }
-}
-
 .formular{
     margin: 90px;
     margin-bottom: 60px;
@@ -46,4 +32,31 @@
 }
 .auth-form-container>a{
     color: #ffa000;
+}
+
+@media only screen and (max-width: 1200px) {
+    .auth-form-container{
+        width: 60%;
+        height: 50%;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .auth-form-container{
+        width: 90%;
+        height: 60%;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .formular{
+        margin: 20px;
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+}
+
+@media only screen and (max-height: 500px) {
+    .auth-form-container{
+        overflow-y: scroll;
+    }
 }
