--- a/beFit/web/src/app/web/autorizare/inregistrare/inregistrare/inregistrare.component.css
+++ b/beFit/web/src/app/web/autorizare/inregistrare/inregistrare/inregistrare.component.css
@@ -1,6 +1,6 @@
 .auth-form-container{
     width: 30%;
-    height: 70%;
+    height: 80%;
     background-color: white;
 
     margin: 0;
@@ -19,21 +19,6 @@
             0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
-
-@media only screen and (max-width: 1200px) {
-    .auth-form-container{
-        width: 60%;
-        height: 70%;
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .auth-form-container{
-        width: 90%;
-        height: 70%;
-    }
-}
-
 .formular{
     margin: 90px;
     margin-bottom: 60px;
@@ -43,7 +28,36 @@
 }
 .input-formular{
     width: 95%;
+    padding:0px;
 }
 .auth-form-container>a{
     color: #ffa000;
+}
+
+@media only screen and (max-width: 1200px) {
+    .auth-form-container{
+        width: 60%;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .auth-form-container{
+        width: 90%;
+    }
+}
+@media only screen and (max-height: 800px) {
+    .formular{
+        margin: 40px;
+        margin-bottom: 5px;
+    }
+}
+@media only screen and (max-height: 670px) {
+    .formular{
+        margin: 10px;
+        margin-bottom: 5px;
+    }
+}
+@media only screen and (max-height: 630px) {
+    .auth-form-container{
+        overflow-y: scroll;
+    }
 }
